# gallery-for-real

./: .gitignore  README.md
agent-cost-analyzer/: .gitignore  CLARITY_LOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  progress.txt  pyproject.toml  run-demo.sh
agent-cost-analyzer/.bkit/runtime/: agent-state.json
agent-cost-analyzer/.bkit/state/: memory.json  pdca-status.json
agent-cost-analyzer/specs/: cost-analyzer.md
agent-cost-analyzer/src/agent_cost_analyzer/: cli.py  models.py
agent-cost-analyzer/tests/: conftest.py  test_build_log_parser.py  test_cli.py  test_comparison_analyzer.py  test_cost_analyzer.py  test_cost_log_parser.py  test_failure_detector.py  test_html_report.py  test_json_report.py  test_markdown_report.py  test_models.py  test_phase_log_parser.py  test_progress_parser.py  test_token_analyzer.py
agent-cost-analyzer/tests/fixtures/: progress.txt  session_build.jsonl
agent-eval-suite/: .gitignore  CLARITY_LOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  progress.txt  pyproject.toml  run-demo.sh
agent-eval-suite/.bkit/runtime/: agent-state.json
agent-eval-suite/.bkit/state/: memory.json  pdca-status.json
agent-eval-suite/specs/: eval-runner.md
agent-eval-suite/src/agent_eval/: cli.py  config.py  metrics.py  models.py  parser.py  runner.py
agent-eval-suite/tests/: test_backends.py  test_cli.py  test_config.py  test_metrics.py  test_models.py  test_parser.py  test_report_html.py  test_report_json.py  test_report_markdown.py  test_runner.py  test_scaffolding.py
agent-eval-suite/tests/fixtures/: .harness-config  IMPLEMENTATION_PLAN.md  benchmark.yaml  eval-config.yaml  maven_output.txt  progress.txt  pytest_output.txt  pytest_output_with_failures.txt
agent-knowledge-harvester/: .gitignore  CLARITY_LOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  progress.txt  pyproject.toml  run-demo.sh
agent-knowledge-harvester/specs/: knowledge-harvester.md
agent-knowledge-harvester/src/agent_harvest/: category.py  clarity_parser.py  cli.py  git_analyzer.py  learnings_parser.py  models.py  progress_parser.py  report_writer.py  rule_writer.py  skill_writer.py  stack.py  synthesizer.py  utils.py
agent-knowledge-harvester/tests/: test_category.py  test_clarity_parser.py  test_cli.py  test_git_analyzer.py  test_integration.py  test_learnings_parser.py  test_models.py  test_progress_parser.py  test_report_writer.py  test_rule_writer.py  test_skill_writer.py  test_stack.py  test_synthesizer.py  test_utils.py
agent-replay-debugger/: .gitignore  CLARITY_LOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  progress.txt  pyproject.toml  run-demo.sh
agent-replay-debugger/specs/: replay-debugger.md
agent-replay-debugger/tests/: conftest.py  test_cli.py  test_export.py  test_fixtures.py  test_models.py  test_parsers.py  test_summary.py  test_timeline.py  test_tui_app.py  test_tui_cost_chart.py  test_tui_detail_panel.py  test_tui_iteration_list.py  test_tui_search.py
prompt-version-control/: CLARITY_LOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  progress.txt  pyproject.toml  run-demo.sh
prompt-version-control/specs/: prompt-vcs.md
prompt-version-control/tests/: conftest.py  test_bind.py  test_checkout.py  test_cli.py  test_compare.py  test_diff.py  test_formatters.py  test_hashing.py  test_init.py  test_log.py  test_models.py  test_snapshot.py  test_storage.py  test_trend.py
tistory-migrator/: .gitignore  CLARITY_LOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  progress.txt  pyproject.toml  run-demo.sh
tistory-migrator/specs/: cli-interface.md  content-converter.md  tistory-extractor.md
tistory-migrator/tests/: test_cli.py  test_converter.py  test_image_downloader.py  test_models.py  test_writer.py
word-counter/: .harness-config  AGENTS.md  CLARITY_LOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  PROMPT_verify.md  README.md  progress.txt  pyproject.toml  run-demo.sh
word-counter/hooks/: pre-commit-gate.sh
word-counter/scripts/: plan-parser.sh
word-counter/specs/: word-counter-cli.md  word-definition.md
word-counter/testdata/: sample.txt
word-counter/tests/: test_cli.py  test_counter.py  test_formatter.py  test_integration.py  test_tokenizer.py
(+526 files in other folders)
