[project]
name = "agent-cost-analyzer"
version = "0.1.0"
description = "AI 에이전트 실행 로그 분석 및 비용 대시보드 도구"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
]

[project.scripts]
cost-analyze = "agent_cost_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cost_analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
