[project]
name = "agent-eval-suite"
version = "0.1.0"
description = "AI 코딩 에이전트 벤치마크 및 비교 평가 도구"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
agent-eval = "agent_eval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
