[project]
name = "agent-replay-debugger"
version = "0.1.0"
description = "TUI debugger for autonomous coding agent session replay"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0.0",
    "rich>=13.0.0",
]

[project.scripts]
agent-replay = "agent_replay.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_replay"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
