[project]
name = "tistory-migrator"
version = "0.1.0"
description = "Tistory 블로그 → Markdown 마이그레이션 CLI 도구"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.13.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
tistory-migrate = "tistory_migrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tistory_migrator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
