[project]
name = "word-counter"
version = "0.1.0"
description = "CLI tool for word frequency analysis"
requires-python = ">=3.12"

[project.scripts]
wc-freq = "word_counter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
